--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Key Box</string>
+    <string name="app_name">密钥盒子-仿</string>
     <string name="empty">empty</string>
     <string name="key_time">修改日期</string>
     <string name="key_password">密码</string>
